hphp/hack/test/typecheck/lambda/hhvm_lambda8.php.exp
File "hhvm_lambda8.php", line 20, characters 15-28:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
